--- a/src/app/content/challenge/components/post/post.module.css
+++ b/src/app/content/challenge/components/post/post.module.css
@@ -1,8 +1,4 @@
-.image{
-    width:90vw;
-    border-radius:3rem;
-    margin-top:0.5rem;
-}
+
 .container{
     display:flex;
     justify-content:space-between;
@@ -21,6 +17,7 @@
     padding: 1rem 1rem;
     border-bottom: solid 1px white;
     margin-bottom: 2rem
+    width
 }
 .user{
     font-weight:1000;
@@ -40,7 +37,7 @@ border-radius: 2rem;
 @media only screen and (min-width:720px) {
     
     .image{
-        width:62vw;
+        width:102vw;
         border-radius:3rem;
         margin-top:0.5rem;
     }
@@ -56,8 +53,7 @@ border-radius: 2rem;
 @media only screen and (min-width:1100px) {
     
     .image{
-        width:35vw;
-        height:40vh;
+        width:25vw;
     }
     .content{
         margin-top: 0rem;
