--- a/src/app/content/carriers/containers/discover/discover.module.css
+++ b/src/app/content/carriers/containers/discover/discover.module.css
@@ -15,6 +15,18 @@
     color: var(--colorSecondary);
 }
 
+.completedStatus {
+    color: var( --hoverButton);
+    position: absolute;
+    bottom: 2rem;
+    right: 4rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 1rem;
+    font-size: 3rem;
+    border: 6px var( --hoverButton) solid;
+}
+
 .flowerArival__container {
     display: flex;
     flex-direction: column;
