--- a/src/app/content/settings/containers/setting/setting.module.css
+++ b/src/app/content/settings/containers/setting/setting.module.css
@@ -22,12 +22,53 @@ margin-right: 1rem;
    
 }
 
+.changeWrapper{
+    display:flex;
+    flex-direction:column;
+}
+
+.button{
+    list-style-type: none;
+    text-decoration: none;
+    padding: 0.8rem 0rem;
+    width:10rem;
+    margin-top:1rem;
+    border-radius: 1.4rem;
+    border:none;
+    background-color:blue;
+    color:white;
+    text-transform: uppercase;
+    transition: ease-in-out .2s;
+    cursor:pointer;
+}
+
+.input{
+    width: 12rem;
+height:2.5rem;
+
+border-radius: 2.5rem;
+padding-left: 4rem;
+border:none;
+margin-top:0.5rem;
+background-color: white;
+}
+
 @media only screen and (min-width:720px) {
     .value{
         font-size:1.2rem;
     }
     .editN{
         display:block;
+    }
+    .button{
+    width:5rem;
+    }
+    .input{
+        margin-right:3rem;
+    }
+    .changeWrapper{
+    flex-direction: row;
+    align-items:center;
     }
  }
  
