--- a/src/app/content/carriers/containers/slider/slider.module.css
+++ b/src/app/content/carriers/containers/slider/slider.module.css
@@ -20,7 +20,19 @@
 .currentCarrier {
     width: 18%;
     border-radius: 10rem;
-    padding: 1rem;
+
+}
+
+.sliderCurrentCarrierBorder {
+    border: var(--colorSecondary) 3px solid;
+}
+
+.sliderAwaitingCarrier {
+    filter: grayscale(20);
+}
+
+.slideCompletedCarrier {
+    border: var(--colorH3Dark) 3px solid ;
 }
 
 .carriers {
